<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="app_name">Bean There</string>

    <string name="facebook_app_id">1449613105343968</string>
    <string name="action_settings">Settings</string>

    <!--ACTIVITY TITLES-->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_cafe_list">Cafe List</string>
    <string name="title_activity_cafe">Cafe</string>
    <string name="title_activity_promotion_list">Wallet</string>

    <!-- LANDING PAGE -->
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="signup">Sign up</string>

    <!--LOGIN PAGE-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="forgotPassword"><u>Forgot password</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dob">Date of Birth</string>
    <string name="btn_register">SIGN UP</string>

     <!-- CAFE PAGE -->
    <string name="btn_about">ABOUT</string>
    <string name="btn_menu">MENU</string>
    <string name="tv_title_about">ABOUT</string>
    <string name="tv_title_operate_hours">Operating Hours</string>
    <string name="tv_title_contact">Contact Number</string>
    <string name="tv_title_address">Address</string>
    <string name="tv_title_bean">Beans</string>
    <string name="tv_title_coffee_machine">Coffee Machine</string>

    <!-- DIALOG BUTTONS -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>

    <!--DIALOG TITLE AND MESSAGE-->
    <string name="error_fill_in_all">Please fill in all fields</string>
    <string name="login_failed">Login failed</string>
    <string name="invalid_server_response">Invalid server response</string>
    <string name="enable_gps_title">Enable Location Service</string>
    <string name="enable_gps_message">Enable Location Service to help us find the nearest cafe for you?</string>
    <string name="enter_promo_code_title">Enter Promo Code</string>
    <string name="enter_promo_code_message">Enter given code to enjoy discounts and freebies!</string>
    
    <!--GENERAL-->
    <string name="no_info">No info</string>
    <string name="required_field">* Required field</string>
    <string name="title_activity_profile">Settings</string>

    <string name="redeeem_promo_message">Please allow the merchant to enter the following 4 digit validation code.</string>
    <string name="redeeem_promo_title">Redeem Now</string>
    <string name="error_title">Error</string>
    <string name="promo_expire">Expires in %1$s days</string>
    <string name="redeem_now">Redeem Now</string>
    <string name="get_started">Get Started</string>
    <string name="btn_update_profile">Update</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_cafe_filter">Cafe Filter</string>
    <string name="enter_email_message">Please enter email address to continue</string>
    <string name="please_wait">Please wait a moment...</string>
    <string name="no_internet">No Internet connection. Please try again.</string>
    <string name="date_join">Joined since %1$s</string>
    <string name="connection_timeout">Connection timeout. Please try again with stable Internet connection.</string>
    <string name="success_register">Account successfully created. Please login to continue.</string>
    <string name="unknown_signup_error">There was some problem while signing you up. Please try again. If problem persists, please contact our administrator.</string>
    <string name="update_profile_success">Profile updated successfully. Please login again to continue</string>
    <string name="fill_in_email">Please fill in email.</string>
    <string name="password_not_match">Password not match.</string>
    <string name="unknown_response">Unknown server response</string>
    <string name="action_favorite">Favourite</string>
    <string name="email_hint">abc@email.com</string>


</resources>
