<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EFEFEF">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableRow style="@style/FormTableRow">

                    <TextView
                        style="@style/MediumTextBlack"
                        android:text="@string/first_name"
                        android:id="@+id/textView7"
                        android:textStyle="bold"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/firstName"
                        style="@style/BeanEditTextBlack" />

                </TableRow>

                <TableRow style="@style/FormTableRowBottom">

                    <TextView
                        style="@style/MediumTextBlack"
                        android:text="@string/last_name"
                        android:id="@+id/textView8"
                        android:textStyle="bold"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/lastName"
                        style="@style/BeanEditTextBlack"/>

                </TableRow>
            </TableLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">


                <TableRow style="@style/FormTableRow">

                    <TextView
                        style="@style/MediumTextBlack"
                        android:text="@string/password"
                        android:id="@+id/textView3"
                        android:textStyle="bold"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/password"
                        style="@style/BeanEditTextBlack"/>

                </TableRow>

                <TableRow style="@style/FormTableRowBottom">

                    <TextView
                        style="@style/MediumTextBlack"
                        android:text="@string/confirm_password"
                        android:id="@+id/textView5"
                        android:textStyle="bold"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/confirmPassword"
                        style="@style/BeanEditTextBlack"/>

                </TableRow>
            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableRow style="@style/FormTableRow">
                    <TextView
                        style="@style/MediumTextBlack"
                        android:text="@string/dob"
                        android:id="@+id/textView6"
                        android:textStyle="bold"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        style="@style/MediumTextBlack"
                        android:id="@+id/dob"
                        android:layout_weight="1"
                        android:onClick="onclickDOBDate"/>

                    <!--<ImageButton-->
                    <!--android:layout_width="30dp"-->
                    <!--android:layout_height="30dp"-->
                    <!--android:layout_marginRight="5dp"-->
                    <!--android:layout_marginLeft="5dp"-->
                    <!--android:id="@+id/buttonDate"-->
                    <!--android:src="@drawable/ic_smiley"-->
                    <!--android:onClick="onclickDOBDate"/>-->
                </TableRow>

            </TableLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btn_update_profile"
        android:id="@+id/button"
        android:onClick="onClickUpdateProfile"/>

</LinearLayout>