<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/white"
            android:id="@+id/imageViewCafeMain"
            android:src="@drawable/placeholder"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_about"
                android:id="@+id/buttonMenu"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_weight="1"
                android:onClick="onClickCafeAbout"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_menu"
                android:id="@+id/buttonAbout"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_weight="1"
                android:onClick="onClickCafeMenu"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/llCafeAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/tv_title_about"
                    android:id="@+id/textViewTitleAbout"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/no_info"
                    android:id="@+id/textViewAbout"
                    android:layout_marginBottom="10dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:id="@+id/imageViewCafe2"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/placeholder"
                    android:background="@android:color/darker_gray"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/tv_title_operate_hours"
                    android:id="@+id/textViewTitleOperateHours"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/no_info"
                    android:id="@+id/textViewHours1"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/tv_title_contact"
                    android:id="@+id/textViewTitleContact"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/no_info"
                    android:id="@+id/textViewContactNum"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/tv_title_address"
                    android:id="@+id/textViewTitleAddress"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/no_info"
                    android:id="@+id/textViewAdd1"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/no_info"
                    android:id="@+id/textViewAdd2"/>

                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.MapFragment" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCafeMenu"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ExpandableListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</ScrollView>