<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/rectangle_black">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/redeeem_promo_title"
            android:id="@+id/textView9"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/redeeem_promo_message"
            android:id="@+id/textView10"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/editTextDialogInput"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:gravity="top|center"
            android:inputType="number"
            android:maxLength="4"
            android:background="@drawable/rectangle"
            android:hint="0000"
            android:padding="15dp">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/required_field"
            android:textColor="@android:color/holo_red_dark"
            android:id="@+id/tvRequired"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#55ffffff"
        android:layout_marginTop="10dp"
        android:text="OK"
        android:id="@+id/buttonOk"
        android:hint="1234"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
